--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;">
     <div class="relative mx-auto h-dvh bg-center bg-cover bg-no-repeat"
-        style="background-image: url(../img/temp_img.png)">
+        style="background-image: url(./img/temp_img.png)">
         <div
             class="absolute top-0 left-0 w-[50vw] h-full bg-gradient-to-r from-black/80 to-transparent pointer-events-none z-0 fade">
         </div>
@@ -26,8 +26,8 @@
             <i class="arrow w-4 h-4 border-solid border-black border-r-[3px] border-t-[3px] transform rotate-45"></i>
         </button> -->
         <div class="flex justify-between py-6 px-12 shadow-2xl bg-neutral-950 opacity-95 text-white w-dvw fixed top-0 border-b-2 border-solid z-50"
-            style="border-image: linear-gradient(to right, rgba(0, 0, 0, 0.9) 20%, rgba(249, 115, 22, 1) 50%, rgba(0, 0, 0, 0.9) 80%) 1;">
-            <a href="#" class="p-4"><img src="" alt="Logo"></a>
+            style="border-image: linear-gradient(to right, rgba(0, 0, 0, 0.9) 20%, rgba(249, 115, 22, 1) 50%, rgba(0, 0, 0, 0.9) 80%) 1; max-height: 7rem;">
+            <a href="#"><img src="./img/temp_logo_2.png" alt="Logo" class="max-h-14"></a>
             <nav>
                 <ul class="flex justify-between p-4 gap-44">
                     <li>
